Wiring up buttons and learning about ScrollView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="dateBox">Date</string>
     <string name="timeBox">Time</string>
     <string name="eventPreview">Event Preview</string>
+    <string name="getDateTime">Select Date/Time</string>
 </resources>
